ServiceCharges.yaml
apiVersion: v1
kind: Service
metadata:  
  name: charges
  labels:
    run: charges  
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: charges
  type: NodePort
