ingressCharges.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: charges
spec:
    rules:
    - host: prueba.com
      http:
          paths:
          - path:
            backend:
               serviceName: charges
               servicePort: 80
